# task-queue

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.sh  cluster_logs.txt  data_race  data_race.cpp  docker-compose.yml  dump.rdb  hello_world.cpp  output.txt  producer_run.txt  race  run_benchmark.sh  run_system.sh  worker_logs.txt
.cache/clangd/index/: hello_world.cpp.BF295035AD1EF74D.idx
include/: RedisHandler.h  task.h
logs/benchmark/: summary.txt
logs/scale/: results.csv
scripts/: benchmark.sh  plot_results.py  run_system.sh  scalability_results.csv  scale_test.sh  worker_logs.txt
src/: RedisHandler.cpp  consumer_only.cpp  monitor.cpp  producer_only.cpp  task_queue.cpp
